--- a/WebShopREST/WebContent/html/restaurant.html
+++ b/WebShopREST/WebContent/html/restaurant.html
@@ -88,14 +88,16 @@
                 </div>
             </div>
         </div>
-
-        <footer class="bg-light text-center text-lg-start">
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: #3b535f;">
-              © 2021 Copyright:
-              <p>Srđan Šuković i Ana Gavrilović</p>
-            </div>
-        </footer>
+ 
     </div>
+
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: #3b535f;">
+            © 2021 Copyright:
+            <p>Srđan Šuković i Ana Gavrilović</p>
+        </div>
+    </footer>
 
     <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../js/jquery.min.js"></script>
