Prilagodjena pocetna stranica novom modelu.

--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -121,11 +121,10 @@
 
 								<div class="view_item">
 									<div class="vi_left">
-										<img :src=r.imagePath>
+										<img :src=r.logoPath>
 									</div>
 									<div class="vi_right">
 										<p class="title">{{r.name}}</p>
-										<span>{{ r.isOpen ? "Otvoren" : "Zatvoren" }}</span>
 										<p class="content"> {{r.type}}</p>
 									</div>
 								</div>
