--- a/WebShopREST/WebContent/html/restaurant.html
+++ b/WebShopREST/WebContent/html/restaurant.html
@@ -48,45 +48,22 @@
                 <div class="container justify-content-center">
                     <ul class="navbar-nav nav-pills nav-fill">
                         <li class="nav-item" v-bind:class="{active : tab === 1}" v-on:click="tab = 1">
-                            <a href="#" class="nav-link">Proizvodi</a>
+                            <a href="#/" class="nav-link">Proizvodi</a>
                         </li>
                         <li class="nav-item" v-bind:class="{active : tab === 2}" v-on:click="tab = 2">
-                            <a href="#" class="nav-link">Informacije</a>
+                            <a href="#/info" class="nav-link">Informacije</a>
                         </li>
                         <li class="nav-item" v-bind:class="{active : tab === 3}" v-on:click="tab = 3">
-                            <a href="#" class="nav-link">Komentari</a>
+                            <a href="#/comments" class="nav-link">Komentari</a>
                         </li>
                     </ul>
                 </div>
             </nav>  
 
             <!-- Main content -->
-            <div class="container py-5 d-grid gap-5">
-                <div class="row">
+            <router-view></router-view>
+            
 
-                    <div v-for="p in products" class="col-md-6 py-2">
-                        <div class="card shadow" v-on:mouseenter="addHoverClass" v-on:mouseleave="removeHoverClass">
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <img :src="p.image" class="card-img-top h-100 food-images" :alt="p.name">
-                                </div>
-                                <div class="col-md-7">
-                                    <div class="card-body">
-                                        <div class="card-title">
-                                            <h2 class="product-name">{{p.name}}</h2>
-                                        </div>
-                                        <div class="card-text">
-                                            <p class="product-description">{{p.description}}</p>
-                                            <p class="product-price">{{p.price}}</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
         </div>
  
     </div>
@@ -105,6 +82,9 @@
     <script src="../js/vue.js"></script>
 	<script src="../js/vue-router.js"></script>
 	<script src="../js/axios.js"></script>
+    <script src="../components/restaurantProducts.js"></script>
+    <script src="../components/restaurantInformation.js"></script>
+    <script src="../components/restaurantComments.js"></script>
     <script src="../app/restaurant.js"></script>
   </body>
 </html>
