--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -2,13 +2,13 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link href="css/homepage.css" rel="stylesheet" />
-	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../css/homepage.css" rel="stylesheet" />
+	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
 	<div id="cover">
-		<img src="images/onion.png" class="logo">
+		<img src="../images/onion.png" class="logo">
 		<ul class="nav-area">
 			<li><a href="#">Prijavite se</a></li>
 			<li><a href="#">Registujte se</a></li>
@@ -144,13 +144,13 @@
 
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="../js/jquery-3.3.1.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<script src="../bootstrap/js/bootstrap.min.js"></script>
 
-	<script src="js/vue.js"></script>
-	<script src="js/axios.js"></script>
-	<script src="app/app.js"></script>
+	<script src="../js/vue.js"></script>
+	<script src="../js/axios.js"></script>
+	<script src="../app/app.js"></script>
 </body>
 
 </html>
