Dodavanje proizvoda u korpu - modalni dijalog

--- a/WebShopREST/WebContent/html/restaurant.html
+++ b/WebShopREST/WebContent/html/restaurant.html
@@ -32,8 +32,8 @@
         </nav>
 
         <!-- Cover image -->
-        <div class="banner-image w-100 d-flex justify-content-center align-items-center" 
-            v-bind:style="{ 'background-image': 'url(' + restaurant.image + ')'}">
+        <div v-if="restaurant !== null" class="banner-image w-100 d-flex justify-content-center align-items-center" 
+            v-bind:style="{ 'background-image': 'url(' + restaurant.image + ')'}" >
             <div class="content text-center">
                 <img :src="restaurant.logo" class="restaurant-logo">
                 <h1 class="restaurant-name">{{restaurant.name}}</h1>
@@ -60,9 +60,10 @@
                 </div>
             </nav>  
 
+            
+
             <!-- Main content -->
             <router-view></router-view>
-            
 
         </div>
  
