--- a/WebShopREST/WebContent/html/restaurant.html
+++ b/WebShopREST/WebContent/html/restaurant.html
@@ -24,8 +24,17 @@
                 <div>
                     <div class="mx-auto"></div>
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link text-white navbar-item-style">Prijavite se</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link text-white navbar-item-style">Registujte se</a></li>
+                        <li class="nav-item text-center" style="width: 100px;"><a href="#" class="nav-link text-white navbar-item-style disabled">Kupac</a></li>
+                        <li class="nav-item text-center">
+                            <a href="#" class="nav-link text-white navbar-item-style">
+                                <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
+                            </a>
+                        </li>
+                        <li class="nav-item text-center">
+                            <a href="#" class="nav-link text-white navbar-item-style">
+                                <img src="../images/cart.png" class="my-profile">&ensp;Moja korpa
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
