Odradjen admin, bez taba komentari.

--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -110,14 +110,14 @@
 				<div class="col-md-9">
 					<div class="row search_bar">
 						<div class="col-md-5">
-							<input type="text" id="restaurantName" placeholder="Naziv restorana" class="flex">
+							<input type="text" id="restaurantName" placeholder="Naziv restorana" class="form-control flex">
 						</div>
 						<div class="col-md-5">
-							<input type="text" id="location" placeholder="Lokacija" class="flex">
+							<input type="text" id="location" placeholder="Lokacija" class="form-control flex">
 						</div>
 
 						<div class="col-md-2">
-							<input type="submit" id="searchButton" value="Pretrazi" class="flex">
+							<input type="submit" id="searchButton" value="Pretraži" class="btn btn-primary flex">
 						</div>
 					</div>
 
