--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -13,8 +13,7 @@
 	<div id="cover">
 		<img src="../images/onion.png" class="logo">
 		<ul class="nav-area">
-			<li><a href="#" @click="showModal = true" >Prijavite se</a></li>
-			<li><a href="#">Registujte se</a></li>
+			<li><a href="#" class="btn">Moj profil</a></li>
 		</ul>
 		
 		<!-- Login modal -->
@@ -62,8 +61,6 @@
 	<script src="../components/adminRestaurants.js"></script>
 	<script src="../components/adminUsers.js"></script>
 	<script src="../components/adminComments.js"></script>
-	<script src="../app/loginVue.js"></script>
-	<script src="../app/loginModalComponent.js"></script>
 	<script src="../app/adminHomepage.js"></script>
 
 </body>
