--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -161,7 +161,7 @@
 	<script src="../js/axios.js"></script>
 	<script src="../app/app.js"></script>
 	<script src="../app/loginVue.js"></script>
-	<script src="../app/loginModalComponent.js"></script>
+	<script src="../components/loginModal.js"></script>
 </body>
 
 </html>
