--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -12,12 +12,13 @@
 	<div id="cover">
 		<img src="../images/onion.png" class="logo">
 		<ul class="nav-area">
-			<li><a href="#" @click="showModal = true" >Prijavite se</a></li>
-			<li><a href="#">Registujte se</a></li>
+			<li><a href="#" @click="showLoginModal = true" >Prijavite se</a></li>
+			<li><a href="#" @click="showRegistrationModal = true">Registujte se</a></li>
 		</ul>
 		
-		<!-- Login modal -->
-		<login-modal v-if="showModal" @close="showModal = false">	</login-modal>
+		<!-- Login/registration modals -->
+		<login-modal v-if="showLoginModal" @close="showLoginModal = false">	</login-modal>
+		<registration-modal v-if="showRegistrationModal" @close="showRegistrationModal = false">	</registration-modal>
 
 	</div>
 	
@@ -162,6 +163,7 @@
 	<script src="../app/app.js"></script>
 	<script src="../app/loginVue.js"></script>
 	<script src="../components/loginModal.js"></script>
+	<script src="../components/registrationModal.js"></script>
 </body>
 
 </html>
