Moja korpa - deo1

--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -30,7 +30,7 @@
                                 <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
                             </a>
                         </li>
-                        <li class="nav-item text-center">
+                        <li class="nav-item text-center" v-on:click="openMyCart">
                             <a href="#" class="nav-link text-white navbar-item-style">
                                 <img src="../images/cart.png" class="my-profile">&ensp;Moja korpa
                             </a>
