--- a/WebShopREST/WebContent/html/buyerRestaurant.html
+++ b/WebShopREST/WebContent/html/buyerRestaurant.html
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li class="nav-item text-center">
-                            <a href="#" class="nav-link text-white navbar-item-style">
+                            <a href="#" class="nav-link text-white navbar-item-style" v-on:click="openMyCart">
                                 <img src="../images/cart.png" class="my-profile">&ensp;Moja korpa
                             </a>
                         </li>
