Moja korpa - kupac deo2

--- a/WebShopREST/WebContent/html/buyerMyCart.html
+++ b/WebShopREST/WebContent/html/buyerMyCart.html
@@ -19,7 +19,7 @@
         <!-- Navigation bar -->
         <nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
             <div class="container">
-                <a href="#" class="navbar-brand navbar-item-style">
+                <a href="../html/buyerHomepage.html" class="navbar-brand navbar-item-style">
                     LOGO
                 </a>
                 <div>
@@ -52,15 +52,16 @@
                 <div class="row">
 
                     <div v-for="i in cart" class="col-md-9 py-2 ">
-                        <div class="card shadow h-100">
+                        <div class="card shadow">
                             <div class="row">
-                                <div class="col-md-5">
-                                    <img :src="i.imagePath" class="card-img-top h-100 food-images" :alt="i.name">
+                                <div class="col-md-3">
+                                    <img :src="i.imagePath" class="card-img-top food-images" :alt="i.name">
                                 </div>
-                                <div class="col-md-7">
+                                <div class="col-md-9">
                                     <div class="card-body">
                                         <div class="card-title">
-                                            <h2 class="product-name">{{i.name}}</h2>
+                                            <span class="item-name">{{i.name}}</span>
+                                            <button class="btn float-end" v-on:click="removeItem(i)"><img src="../images/x.png"></button>
                                         </div>
                                         <div class="card-text">
                                             <div class="itemQuantity1">
@@ -85,6 +86,13 @@
                         </div>
                     </div>
 
+                    <div class="col-md-9">
+                        <p class="text-end my-4 mx-2 totalPrice">
+                            <span style="color: #3b535f;">Ukupno: </span>
+                            <span style="color: #C75D4F;">900.00 RSD</span>
+                        </p>
+                        <button class="btn btn-primary float-end btn-order">Poruči</button>
+                    </div>
                     
                 </div>
             </div>
