--- a/WebShopREST/WebContent/html/buyerRestaurant.html
+++ b/WebShopREST/WebContent/html/buyerRestaurant.html
@@ -17,7 +17,7 @@
         <!-- Navigation bar -->
         <nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
             <div class="container">
-                <a href="#" class="navbar-brand navbar-item-style">
+                <a href="../html/buyerHomepage.html" class="navbar-brand navbar-item-style">
                     LOGO
                 </a>
                 <div>
