Promenjen stil naslovne na ostalim stranicama.

--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -10,14 +10,30 @@
 </head>
 
 <body>
-	<div id="cover">
-		<img src="../images/onion.png" class="logo">
-		<ul class="nav-area">
-			<li><a href="#" class="btn">Moj profil</a></li>
-		</ul>
 
+	<!-- Navigation bar 1  -->
+	<nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
+        <div class="container">
+            <a href="#" class="navbar-brand navbar-item-style">
+                LOGO
+            </a>
+            <div>
+                <div class="mx-auto"></div>
+                <ul class="navbar-nav">
+                    <li class="nav-item text-center" style="width: 100px;"><a href="#" class="nav-link text-white navbar-item-style disabled">Administrator</a></li>
+                    <li class="nav-item text-center">
+                        <a href="#" class="nav-link text-white navbar-item-style">
+                            <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
+                        </a>
+                    </li>   
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-	</div>
+    <!-- Cover image -->
+    <div class="cover-image w-100 d-flex justify-content-center align-items-center" >
+    </div>
 	
 
 
