--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -77,6 +77,7 @@
 	<script src="../js/axios.js"></script>
 
     <script src="../components/managerRestaurants.js"></script>
+	<script src="../components/managerProducts.js"></script>
 
     <script src="../app/managerHomepage.js"></script>
     
