Odradjeno dodavanje proizvoda.

--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link href="../css/homepage.css" rel="stylesheet" />
     <link href="../css/managerHomepage.css" rel="stylesheet" />
+	<link href="../css/employeeModal.css" rel="stylesheet" /> <!-- Used for new product modal dialog. -->
 	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -78,6 +79,7 @@
 
     <script src="../components/managerRestaurants.js"></script>
 	<script src="../components/managerProducts.js"></script>
+	<script src="../components/newProductModal.js"></script>
 
     <script src="../app/managerHomepage.js"></script>
     
