Kupac pocetna stranica - izmena

--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -10,7 +10,7 @@
     <link href="../css/buyerHomepage.css" rel="stylesheet" />
     <link href="../css/buyerRestaurant.css" rel="stylesheet" />
 
-    <title>Početna stranica</title>
+    <title>Kupac - Početna stranica</title>
 </head>
 <body>
     <div id="page">
