Odradjen prikaz kupaca za menadzera.

--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -80,6 +80,7 @@
     <script src="../components/managerRestaurants.js"></script>
 	<script src="../components/managerProducts.js"></script>
 	<script src="../components/newProductModal.js"></script>
+	<script src="../components/managerBuyers.js"></script>
 
     <script src="../app/managerHomepage.js"></script>
     
