Odradjeni komentari za menadzera.

--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -81,6 +81,7 @@
 	<script src="../components/managerProducts.js"></script>
 	<script src="../components/newProductModal.js"></script>
 	<script src="../components/managerBuyers.js"></script>
+	<script src="../components/managerComments.js"></script>
 
     <script src="../app/managerHomepage.js"></script>
     
