--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -7,10 +7,11 @@
 	<link href="../css/employeeModal.css" rel="stylesheet" /> <!-- Used for new product modal dialog. -->
 	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="../css/buyerHomepage.css" rel="stylesheet" />
+    <link href="../css/buyerRestaurant.css" rel="stylesheet" />
 </head>
 
 <body>
-
      <!-- Navigation bar 1  -->
      <nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
@@ -35,38 +36,47 @@
     <div class="cover-image w-100 d-flex justify-content-center align-items-center" >
     </div>
 	
+	<div id="page">
 
+		<!-- Navigation bar  2-->
+		<div id="tabs">
+			<nav class="navbar navbar-expand-lg navbar2-custom">
+				<div class="container justify-content-center">
+					<ul class="navbar-nav nav-pills nav-fill">
+						<li class="nav-item" v-bind:class="{active : tab === 1}" v-on:click="tab = 1">
+							<a href="#/" class="nav-link">Restorani</a>
+						</li>
+						<li class="nav-item" v-bind:class="{active : tab === 2}" v-on:click="tab = 2">
+							<a href="#/products" class="nav-link">Proizvodi</a>
+						</li>
+						<li class="nav-item" v-bind:class="{active : tab === 3}" v-on:click="tab = 3">
+							<a href="#/orders" class="nav-link">Porudžbine</a>
+						</li>
+						<li class="nav-item" v-bind:class="{active : tab === 4}" v-on:click="tab = 4">
+							<a href="#/buyers" class="nav-link">Kupci</a>
+						</li>
+						<li class="nav-item" v-bind:class="{active : tab === 5}" v-on:click="tab = 5">
+							<a href="#/info" class="nav-link">Informacije</a>
+						</li>
+						<li class="nav-item" v-bind:class="{active : tab === 6}" v-on:click="tab = 6">
+							<a href="#/comments" class="nav-link">Komentari</a>
+						</li>
+					</ul>
+				</div>
+			</nav>  
 
-	<!-- Navigation bar  2-->
-	<div id="tabs">
-		<nav class="navbar navbar-expand-lg navbar2-custom">
-			<div class="container justify-content-center">
-				<ul class="navbar-nav nav-pills nav-fill">
-					<li class="nav-item" v-bind:class="{active : tab === 1}" v-on:click="tab = 1">
-						<a href="#/" class="nav-link">Restorani</a>
-					</li>
-					<li class="nav-item" v-bind:class="{active : tab === 2}" v-on:click="tab = 2">
-						<a href="#/products" class="nav-link">Proizvodi</a>
-					</li>
-					<li class="nav-item" v-bind:class="{active : tab === 3}" v-on:click="tab = 3">
-						<a href="#/orders" class="nav-link">Porudžbine</a>
-					</li>
-                    <li class="nav-item" v-bind:class="{active : tab === 4}" v-on:click="tab = 4">
-						<a href="#/buyers" class="nav-link">Kupci</a>
-					</li>
-                    <li class="nav-item" v-bind:class="{active : tab === 5}" v-on:click="tab = 5">
-						<a href="#/info" class="nav-link">Informacije</a>
-					</li>
-                    <li class="nav-item" v-bind:class="{active : tab === 6}" v-on:click="tab = 6">
-						<a href="#/comments" class="nav-link">Komentari</a>
-					</li>
-				</ul>
-			</div>
-		</nav>  
-        <router-view></router-view>
+			<router-view></router-view>
+
+		</div>
 	</div>
-	
 
+	<!-- Footer -->
+    <footer class="bg-light text-center text-lg-start">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: #3b535f;">
+            © 2021 Copyright:
+            <p>Srđan Šuković i Ana Gavrilović</p>
+        </div>
+    </footer>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="../js/jquery-3.3.1.min.js"></script>
@@ -82,6 +92,7 @@
 	<script src="../components/newProductModal.js"></script>
 	<script src="../components/managerBuyers.js"></script>
 	<script src="../components/managerComments.js"></script>
+	<script src="../components/managerOrders.js"></script>
 
     <script src="../app/managerHomepage.js"></script>
     
