Odradjena stranica novi restoran bez mape.

--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -5,6 +5,7 @@
 	<link href="../css/homepage.css" rel="stylesheet" />
 	<link href="../css/employeeModal.css" rel="stylesheet" />
 	<link href="../css/adminHomepage.css" rel="stylesheet" />
+	<link href="../css/managerHomepage.css" rel="stylesheet" />
 	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -75,6 +76,7 @@
 	<script src="../components/adminRestaurants.js"></script>
 	<script src="../components/adminUsers.js"></script>
 	<script src="../components/adminComments.js"></script>
+	<script src="../components/adminNewRestaurant.js"></script>
 	<script src="../app/adminHomepage.js"></script>
 	<script src="../components/newEmployee.js"></script>
 
