Dodate informacije o menadzerovom restoranu.

--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -93,6 +93,7 @@
 	<script src="../components/managerBuyers.js"></script>
 	<script src="../components/managerComments.js"></script>
 	<script src="../components/managerOrders.js"></script>
+	<script src="../components/managerRestaurantInformation.js"></script>
 
     <script src="../app/managerHomepage.js"></script>
     
