--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -8,6 +8,8 @@
 	<link href="../css/managerHomepage.css" rel="stylesheet" />
 	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
+	<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
 </head>
 
 <body>
