Uskladjeni stilovi na projektu

--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -72,7 +72,7 @@
 
 	<!-- Footer -->
     <footer class="bg-light text-center text-lg-start">
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2); color: #3b535f;">
+        <div class="text-center p-3" style="background-color: #e0e0e0; color: #3b535f;">
             © 2021 Copyright:
             <p>Srđan Šuković i Ana Gavrilović</p>
         </div>
