--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -4,9 +4,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link href="../css/homepage.css" rel="stylesheet" />
 	<link href="../css/employeeModal.css" rel="stylesheet" />
-	<link href="../css/adminHomepage.css" rel="stylesheet" />
 	<link href="../css/managerHomepage.css" rel="stylesheet" />
 	<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../css/adminHomepage.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
 	<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
@@ -38,8 +38,6 @@
     <div class="cover-image w-100 d-flex justify-content-center align-items-center" >
     </div>
 	
-
-
 	<!-- Navigation bar  -->
 	<div id="tabs">
 		<nav class="navbar navbar-expand-lg navbar2-custom">
@@ -61,11 +59,13 @@
 	</div>
 	
 	
-	
-
-
-
-
+	<!-- Footer -->
+	<footer class="bg-light text-center text-lg-start">
+		<div class="text-center p-3" style="background-color: #e0e0e0; color: #3b535f;">
+			© 2021 Copyright:
+			<p>Srđan Šuković i Ana Gavrilović</p>
+		</div>
+	</footer>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="../js/jquery-3.3.1.min.js"></script>
