--- a/WebShopREST/WebContent/html/unregistratedUserRestaurant.html
+++ b/WebShopREST/WebContent/html/unregistratedUserRestaurant.html
@@ -9,6 +9,9 @@
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/buyerRestaurant.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
+	<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
+
     <title>Prikaz restorana</title>
 </head>
 <body>
