--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -35,6 +35,11 @@
                                 <img src="../images/cart.png" class="my-profile">&ensp;Moja korpa
                             </a>
                         </li>
+                        <li class="nav-item text-center" v-on:click="logOut">
+                            <a href="#" class="nav-link text-white navbar-item-style">
+                                <img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
+                            </a>
+                        </li>   
                     </ul>
                 </div>
             </div>
