--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -23,10 +23,15 @@
             <div>
                 <div class="mx-auto"></div>
                 <ul class="navbar-nav">
-                    <li class="nav-item text-center" style="width: 100px;"><a href="#" class="nav-link text-white navbar-item-style disabled">Administrator</a></li>
+                    <li class="nav-item text-center"><a href="#" class="nav-link text-white navbar-item-style disabled">Administrator</a></li>
                     <li class="nav-item text-center">
                         <a href="#" class="nav-link text-white navbar-item-style">
                             <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
+                        </a>
+                    </li> 
+					<li class="nav-item text-center" @click="logOut">
+                        <a href="#" class="nav-link text-white navbar-item-style">
+                            <img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
                         </a>
                     </li>   
                 </ul>
