--- a/WebShopREST/WebContent/html/delivererHomepage.html
+++ b/WebShopREST/WebContent/html/delivererHomepage.html
@@ -30,6 +30,11 @@
                                 <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
                             </a>
                         </li>
+                        <li class="nav-item text-center" v-on:click="logOut">
+                            <a href="#" class="nav-link text-white navbar-item-style">
+                                <img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
+                            </a>
+                        </li>   
                     </ul>
                 </div>
             </div>
