--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -29,7 +29,12 @@
                         <a href="#" class="nav-link text-white navbar-item-style">
                             <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
                         </a>
-                    </li>   
+                    </li>  
+					<li class="nav-item text-center" v-on:click="logOut">
+						<a href="#" class="nav-link text-white navbar-item-style">
+							<img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
+						</a>
+					</li>   
                 </ul>
             </div>
         </div>
