Sredjeno izlogovanje za menadzera i admina.

--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -14,30 +14,33 @@
 
 <body>
 
-	<!-- Navigation bar 1  -->
-	<nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
-        <div class="container">
-            <a href="#" class="navbar-brand navbar-item-style">
-                LOGO
-            </a>
-            <div>
-                <div class="mx-auto"></div>
-                <ul class="navbar-nav">
-                    <li class="nav-item text-center"><a href="#" class="nav-link text-white navbar-item-style disabled">Administrator</a></li>
-                    <li class="nav-item text-center">
-                        <a href="#" class="nav-link text-white navbar-item-style">
-                            <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
-                        </a>
-                    </li> 
-					<li class="nav-item text-center" @click="logOut">
-                        <a href="#" class="nav-link text-white navbar-item-style">
-                            <img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
-                        </a>
-                    </li>   
-                </ul>
-            </div>
-        </div>
-    </nav>
+	<div id="navbar">
+		<!-- Navigation bar 1  -->
+		<nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
+			<div class="container">
+				<a href="#" class="navbar-brand navbar-item-style">
+					LOGO
+				</a>
+				<div>
+					<div class="mx-auto"></div>
+					<ul class="navbar-nav">
+						<li class="nav-item text-center"><a href="#" class="nav-link text-white navbar-item-style disabled">Administrator</a></li>
+						<li class="nav-item text-center">
+							<a href="#" class="nav-link text-white navbar-item-style">
+								<img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
+							</a>
+						</li> 
+						<li class="nav-item text-center" @click="logOut">
+							<a href="#" class="nav-link text-white navbar-item-style">
+								<img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
+							</a>
+						</li>   
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+	
 
     <!-- Cover image -->
     <div class="cover-image w-100 d-flex justify-content-center align-items-center" >
@@ -85,6 +88,7 @@
 	<script src="../components/adminComments.js"></script>
 	<script src="../components/adminNewRestaurant.js"></script>
 	<script src="../app/adminHomepage.js"></script>
+	<script src="../app/navbar.js"></script>
 	<script src="../components/newEmployee.js"></script>
 
 </body>
