--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -15,30 +15,33 @@
 </head>
 
 <body>
-     <!-- Navigation bar 1  -->
-     <nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
-        <div class="container">
-            <a href="#" class="navbar-brand navbar-item-style">
-                LOGO
-            </a>
-            <div>
-                <div class="mx-auto"></div>
-                <ul class="navbar-nav">
-                    <li class="nav-item text-center" style="width: 100px;"><a href="#" class="nav-link text-white navbar-item-style disabled">Menadžer</a></li>
-                    <li class="nav-item text-center">
-                        <a href="#" class="nav-link text-white navbar-item-style">
-                            <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
-                        </a>
-                    </li>  
-					<li class="nav-item text-center" v-on:click="logOut">
-						<a href="#" class="nav-link text-white navbar-item-style">
-							<img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
-						</a>
-					</li>   
-                </ul>
-            </div>
-        </div>
-    </nav>
+	<div id="navbar">
+		<!-- Navigation bar 1  -->
+		<nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
+			<div class="container">
+				<a href="#" class="navbar-brand navbar-item-style">
+					LOGO
+				</a>
+				<div>
+					<div class="mx-auto"></div>
+					<ul class="navbar-nav">
+						<li class="nav-item text-center" style="width: 100px;"><a href="#" class="nav-link text-white navbar-item-style disabled">Menadžer</a></li>
+						<li class="nav-item text-center">
+							<a href="#" class="nav-link text-white navbar-item-style">
+								<img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
+							</a>
+						</li>  
+						<li class="nav-item text-center" v-on:click="logOut">
+							<a href="#" class="nav-link text-white navbar-item-style">
+								<img src="../images/logout.png" class="my-profile" height="20px">&ensp;Izloguj se
+							</a>
+						</li>   
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+     
 
     <!-- Cover image -->
     <div class="cover-image w-100 d-flex justify-content-center align-items-center" >
@@ -104,6 +107,7 @@
 	<script src="../components/managerRestaurantInformation.js"></script>
 
     <script src="../app/managerHomepage.js"></script>
+	<script src="../app/navbar.js"></script>
     
 
 </body>
