--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -155,14 +155,14 @@
 	
 						<div class="row main_content">
 							
-							<div class="col-md-12 padding1-0">
+							<div class="col-md-12" style="padding-right: 2px; padding-left: 2px;">
                             
-								<div class="container padding-0">
+								<div class="container" style="padding-right: 0; padding-left: 0;">
 									<div class="row">
 	
 										<div v-for="r in restaurants" v-if="restaurants !== null">
 											<div class="card shadow my-2" v-on:click="seeRestaurantDetails(r)">
-												<div class="row p-4 ">
+												<div class="row p-4">
 													<div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
 														<img :src="r.logoPath" alt="r.name" class="mx-2 restaurant-images">
 													</div>
