--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -71,20 +71,20 @@
 								</button>
 								<ul class="list-group flex" v-if="restaurantTypeDropdownOpen">
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="Chineese" v-model="checkedRestaurantTypes" v-on:change="typeFilter">
-									Kineski
+									<input class="form-check-input me-1" type="checkbox" value="Brza hrana" v-model="checkedRestaurantTypes">
+									Brza hrana
 									</label>
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="Italian" v-model="checkedRestaurantTypes" v-on:change="typeFilter">
+									<input class="form-check-input me-1" type="checkbox" value="Italijanski" v-model="checkedRestaurantTypes">
 									Italijanski
 									</label>
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="Barbeque" v-model="checkedRestaurantTypes" v-on:change="typeFilter">
+									<input class="form-check-input me-1" type="checkbox" value="Roštilj" v-model="checkedRestaurantTypes">
 									Roštilj
 									</label>
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="Romanian" v-model="checkedRestaurantTypes" v-on:change="typeFilter">
-									Rumunski
+									<input class="form-check-input me-1" type="checkbox" value="Kineski" v-model="checkedRestaurantTypes">
+									Kineski
 									</label>
 									
 								</ul>
@@ -99,23 +99,23 @@
 								</button>
 								<ul class="list-group flex" v-if="restaurantMarkDropdownOpen">
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="">
+									<input class="form-check-input me-1" type="checkbox" value="4-5" v-model="checkedRestaurantMarks">
 									4 - 5
 									</label>
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="">
+									<input class="form-check-input me-1" type="checkbox" value="3-4" v-model="checkedRestaurantMarks">
 									3 - 4
 									</label>
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="">
+									<input class="form-check-input me-1" type="checkbox" value="2-3" v-model="checkedRestaurantMarks">
 									2 - 3
 									</label>
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="">
+									<input class="form-check-input me-1" type="checkbox" value="1-2" v-model="checkedRestaurantMarks">
 									1 - 2
 									</label>
 									<label class="list-group-item">
-									<input class="form-check-input me-1" type="checkbox" value="">
+									<input class="form-check-input me-1" type="checkbox" value="0-1" v-model="checkedRestaurantMarks">
 									0 - 1
 									</label>
 									
@@ -126,7 +126,7 @@
 						<div class="row mb-3">
 							<div class="col-md-12">
 								<div class="form-check checkbox-style rounded" style="padding-left: 35px">
-									<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+									<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" v-model="onlyOpenRestaurants">
 									<label class="form-check-label" for="flexCheckDefault">
 									  Samo otvoreni restorani
 									</label>
@@ -161,7 +161,7 @@
 									<div class="row">
 	
 										<div v-for="r in restaurants" v-if="restaurants !== null">
-											<div class="card shadow my-2" v-on:click="seeRestaurantDetails(r)">
+											<div class="card shadow my-2" v-on:click="seeRestaurantDetails(r)" v-if="filterSatisfied(r.type, r.mark, r)">
 												<div class="row p-4">
 													<div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
 														<img :src="r.logoPath" alt="r.name" class="mx-2 restaurant-images">
@@ -178,7 +178,7 @@
 														</div>
 														<div class="row">
 															<p style="margin-top: 10px;">{{r.type}}</p>
-															<p v-if="r.isWorking" style="margin-top: -15px;">Otvoreno</p>
+															<p v-if="isWorking(r)" style="margin-top: -15px;">Otvoreno</p>
 															<p v-else style="margin-top: -15px;">Zatvoreno</p>
 														</div>
 													</div>
