Sortiranje restorana - sve uloge

--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -88,6 +88,7 @@
 	<script src="../components/adminUsers.js"></script>
 	<script src="../components/adminComments.js"></script>
 	<script src="../components/adminNewRestaurant.js"></script>
+	<script src="../app/sorting.js"></script>
 	<script src="../app/adminHomepage.js"></script>
 	<script src="../app/navbar.js"></script>
 	<script src="../components/newEmployee.js"></script>
