--- a/WebShopREST/WebContent/html/delivererHomepage.html
+++ b/WebShopREST/WebContent/html/delivererHomepage.html
@@ -88,6 +88,7 @@
     <script src="../components/delivererHomepageRestaurants.js"></script>
     <script src="../components/delivererHomepageMyOrders.js"></script>
     <script src="../components/delivererHomepageOpenOrders.js"></script>
+    <script src="../app/sorting.js"></script>
     <script src="../app/delivererHomepage.js"></script>
     
 </body>
