--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -106,6 +106,7 @@
 	<script src="../components/managerOrders.js"></script>
 	<script src="../components/managerRestaurantInformation.js"></script>
 
+	<script src="../app/sorting.js"></script>
     <script src="../app/managerHomepage.js"></script>
 	<script src="../app/navbar.js"></script>
     
