--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -88,6 +88,7 @@
 	<script src="../js/axios.js"></script>
     <script src="../components/buyerHomepageRestaurants.js"></script>
     <script src="../components/buyerHomepageMyOrders.js"></script>
+    <script src="../app/sorting.js"></script>
     <script src="../app/buyerHomepage.js"></script>
 
 </body>
