Administrator - prikaz korisnika - sortiranje i search

--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -84,11 +84,12 @@
 	<script src="../js/vue.js"></script>
 	<script src="../js/vue-router.js"></script>
 	<script src="../js/axios.js"></script>
+	<script src="../app/sorting.js"></script>
 	<script src="../components/adminRestaurants.js"></script>
 	<script src="../components/adminUsers.js"></script>
 	<script src="../components/adminComments.js"></script>
 	<script src="../components/adminNewRestaurant.js"></script>
-	<script src="../app/sorting.js"></script>
+	<script src="../js/moment.min.js"></script>
 	<script src="../app/adminHomepage.js"></script>
 	<script src="../app/navbar.js"></script>
 	<script src="../components/newEmployee.js"></script>
