--- a/WebShopREST/WebContent/html/unregistratedUserRestaurant.html
+++ b/WebShopREST/WebContent/html/unregistratedUserRestaurant.html
@@ -46,7 +46,7 @@
 
         <!-- Cover image -->
         <div v-if="restaurant !== null" class="banner-image w-100 d-flex justify-content-center align-items-center" 
-            v-bind:style="{ 'background-image': 'url(' + restaurant.image + ')'}" >
+            v-bind:style="{ 'background-image': 'url(' + restaurant.imagePath + ')'}" >
             <div class="content text-center">
                 <img :src="restaurant.logo" class="restaurant-logo">
                 <h1 class="restaurant-name">{{restaurant.name}}</h1>
