--- a/WebShopREST/WebContent/html/homepage.html
+++ b/WebShopREST/WebContent/html/homepage.html
@@ -161,7 +161,7 @@
 									<div class="row">
 	
 										<div v-for="r in restaurants" v-if="restaurants !== null">
-											<div class="card shadow my-2" v-on:click="seeRestaurantDetails(r)" v-if="filterSatisfied(r)">
+											<div class="card shadow my-2" style="cursor: pointer;" v-on:click="seeRestaurantDetails(r)" v-if="filterSatisfied(r)">
 												<div class="row p-4">
 													<div class="col-md-2" style="padding-left: 10px; padding-right: 10px;">
 														<img :src="r.logoPath" alt="r.name" class="mx-2 restaurant-images">
