--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -25,7 +25,7 @@
                     <div class="mx-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item text-center" style="width: 100px;"><a href="#" class="nav-link text-white navbar-item-style disabled">Kupac</a></li>
-                        <li class="nav-item text-center">
+                        <li class="nav-item text-center" @click="myProfile">
                             <a href="#" class="nav-link text-white navbar-item-style">
                                 <img src="../images/userWhite.png" class="my-profile" height="20px">&ensp;Moj profil
                             </a>
