--- a/WebShopREST/WebContent/html/buyerMyCart.html
+++ b/WebShopREST/WebContent/html/buyerMyCart.html
@@ -96,7 +96,7 @@
                             <span style="color: #3b535f;">Ukupno: </span>
                             <span style="color: #C75D4F;">{{totalPrice}} RSD</span>
                         </p>
-                        <button class="btn btn-primary float-end btn-order">Poruči</button>
+                        <button class="btn btn-primary float-end btn-order" v-on:click="finishOrder">Poruči</button>
                     </div>
                     
                 </div>
