--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -86,6 +86,7 @@
     <script src="../js/vue.js"></script>
 	<script src="../js/vue-router.js"></script>
 	<script src="../js/axios.js"></script>
+    <script src="../js/moment.min.js"></script>
     <script src="../components/buyerHomepageRestaurants.js"></script>
     <script src="../components/buyerHomepageMyOrders.js"></script>
     <script src="../app/sorting.js"></script>
