--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -102,6 +102,7 @@
 	<script src="../js/vue.js"></script>
 	<script src="../js/vue-router.js"></script>
 	<script src="../js/axios.js"></script>
+	<script src="../js/moment.min.js"></script>
 
     <script src="../components/managerRestaurants.js"></script>
 	<script src="../components/managerProducts.js"></script>
