--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -90,6 +90,7 @@
     <script src="../components/buyerHomepageRestaurants.js"></script>
     <script src="../components/buyerHomepageMyOrders.js"></script>
     <script src="../app/sorting.js"></script>
+    <script src="../app/sortingBuyerOrders.js"></script>
     <script src="../app/buyerHomepage.js"></script>
 
 </body>
