--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -113,6 +113,7 @@
 	<script src="../components/managerRestaurantInformation.js"></script>
 
 	<script src="../app/sorting.js"></script>
+	<script src="../app/sortingManagerOrders.js"></script>
     <script src="../app/managerHomepage.js"></script>
 	<script src="../app/navbar.js"></script>
     
