--- a/WebShopREST/WebContent/html/delivererHomepage.html
+++ b/WebShopREST/WebContent/html/delivererHomepage.html
@@ -85,10 +85,12 @@
     <script src="../js/vue.js"></script>
 	<script src="../js/vue-router.js"></script>
 	<script src="../js/axios.js"></script>
+    <script src="../js/moment.min.js"></script>
     <script src="../components/delivererHomepageRestaurants.js"></script>
     <script src="../components/delivererHomepageMyOrders.js"></script>
     <script src="../components/delivererHomepageOpenOrders.js"></script>
     <script src="../app/sorting.js"></script>
+    <script src="../app/sortingBuyerOrders.js"></script>
     <script src="../app/delivererHomepage.js"></script>
     
 </body>
