--- a/WebShopREST/WebContent/html/buyerHomepage.html
+++ b/WebShopREST/WebContent/html/buyerHomepage.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/vue-star-rating/dist/VueStarRating.umd.min.js"></script>
     <link href="../css/buyerHomepage.css" rel="stylesheet" />
     <link href="../css/buyerRestaurant.css" rel="stylesheet" />
 
@@ -89,6 +90,7 @@
     <script src="../js/moment.min.js"></script>
     <script src="../components/buyerHomepageRestaurants.js"></script>
     <script src="../components/buyerHomepageMyOrders.js"></script>
+    <script src="../components/starRating.js"></script>
     <script src="../app/sorting.js"></script>
     <script src="../app/sortingBuyerOrders.js"></script>
     <script src="../app/buyerHomepage.js"></script>
