--- a/WebShopREST/WebContent/html/adminHomepage.html
+++ b/WebShopREST/WebContent/html/adminHomepage.html
@@ -9,8 +9,9 @@
 	<link href="../css/buyerHomepage.css" rel="stylesheet" />
 	<link href="../css/adminHomepage.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
-	<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
+	<link rel="stylesheet" href="../css/mapStyle.css" type="text/css">
+
+	<script src="../js/OpenLayers.js"></script>
 </head>
 
 <body>
