--- a/WebShopREST/WebContent/html/buyerRestaurant.html
+++ b/WebShopREST/WebContent/html/buyerRestaurant.html
@@ -21,7 +21,7 @@
         <nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
             <div class="container">
                 <a href="../html/buyerHomepage.html" class="navbar-brand navbar-item-style">
-                    LOGO
+                    <img src="../images/logo.png">
                 </a>
                 <div>
                     <div class="mx-auto"></div>
