--- a/WebShopREST/WebContent/html/managerHomepage.html
+++ b/WebShopREST/WebContent/html/managerHomepage.html
@@ -20,7 +20,7 @@
 		<nav class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
 			<div class="container">
 				<a href="#" class="navbar-brand navbar-item-style">
-					LOGO
+					<img src="../images/logo.png">
 				</a>
 				<div>
 					<div class="mx-auto"></div>
