--- a/WebShopREST/WebContent/html/myProfile.html
+++ b/WebShopREST/WebContent/html/myProfile.html
@@ -21,7 +21,7 @@
             <nav v-if="user.role == 'ADMINISTRATOR'" class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
                 <div class="container">
                     <a href="../html/buyerHomepage.html" class="navbar-brand navbar-item-style" @click="goToHomepage">
-                        LOGO
+                        <img src="../images/logo.png">
                     </a>
                     <div>
                         <div class="mx-auto"></div>
