--- a/WebShopREST/WebContent/html/myProfile.html
+++ b/WebShopREST/WebContent/html/myProfile.html
@@ -45,7 +45,7 @@
             <nav v-if="user.role == 'MANAGER'" class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
                 <div class="container">
                     <a href="../html/buyerHomepage.html" class="navbar-brand navbar-item-style" @click="goToHomepage">
-                        LOGO
+                        <img src="../images/logo.png">
                     </a>
                     <div>
                         <div class="mx-auto"></div>
@@ -69,7 +69,7 @@
             <nav v-if="user.role == 'BUYER'" class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
                 <div class="container">
                     <a href="../html/buyerHomepage.html" class="navbar-brand navbar-item-style" @click="goToHomepage">
-                        LOGO
+                        <img src="../images/logo.png">
                     </a>
                     <div>
                         <div class="mx-auto"></div>
@@ -98,7 +98,7 @@
             <nav v-if="user.role == 'DELIVERER'" class="navbar mynavbar1 fixed-top navbar-expand-lg navbar-dark p-md-3">
                 <div class="container">
                     <a href="../html/buyerHomepage.html" class="navbar-brand navbar-item-style" @click="goToHomepage">
-                        LOGO
+                        <img src="../images/logo.png">
                     </a>
                     <div>
                         <div class="mx-auto"></div>
